<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_start"
        android:icon="@drawable/ic_start"
        android:showAsAction="ifRoom"
        android:title="@string/menu_item_start">
    </item>
    <item
        android:id="@+id/menu_repeat_old_words"
        android:showAsAction="never"
        android:title="@string/menu_item_repeat_old_words">
    </item>
    <item
        android:id="@+id/menu_learn_new_words"
        android:showAsAction="never"
        android:title="@string/menu_item_learn_new_words">
    </item>
    <item
        android:id="@+id/menu_import_new_words"
        android:showAsAction="never"
        android:title="@string/menu_item_import_new_words">
    </item>
    <item
        android:id="@+id/menu_dby"
        android:showAsAction="never"
        android:title="@string/menu_item_db">
        <menu>
            <item
                android:id="@+id/menu_db_export"
                android:title="@string/menu_item_db_export">
            </item>
            <item
                android:id="@+id/menu_db_import"
                android:title="@string/menu_item_db_import">
            </item>
            <item
                android:id="@+id/menu_db_clear"
                android:title="@string/menu_item_db_clear">
            </item>
        </menu>
    </item>
</menu>