<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/frontTextView"
        android:layout_width="0dp"
        android:layout_height="100sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:padding="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        tools:text="Передняя сторона карты" />

    <TextView
        android:id="@+id/backTextView"
        android:layout_width="0dp"
        android:layout_height="100sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:padding="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frontTextView"
        tools:text="Задняя сторона карты" />

    <!-- Нижнаяя часть: ввод ответов -->

    <!-- Тип карты SIMPLE - перевернуть просто карту -->
    <Button
        android:id="@+id/rollCardButton"
        android:layout_width="0dp"
        android:layout_height="64sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/roll_card_button"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <!-- Тип карты ANSWER - ввод текста для сверки с обратной сторой карты -->
    <EditText
        android:id="@+id/inputAnswerText"
        android:layout_width="0dp"
        android:layout_height="64sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        android:hint="@string/input_answer_hint"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions"
        android:minHeight="48dp"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:text="Какой-то ответ на карту" />

    <TextView
        android:id="@+id/answerText"
        android:layout_width="0dp"
        android:layout_height="100sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/textview_border"
        android:backgroundTint="#E91E63"
        android:clickable="true"
        android:gravity="center"
        android:padding="20dp"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backTextView"
        tools:text="Какой-то ответ на карту" />

    <!-- Общие кнопки для карт типа SIMPLE и ANSWER_EX - подтверждение что знаю ответ -->
    <Button
        android:id="@+id/okCardButton"
        android:layout_width="0dp"
        android:layout_height="64sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="#01554D"
        android:text="@string/ok_card_button"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/errorCardButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/errorCardButton"
        android:layout_width="0dp"
        android:layout_height="64sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="#700383"
        android:text="@string/error_card_button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/okCardButton" />

</androidx.constraintlayout.widget.ConstraintLayout>